create github pages

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/o">best mobile website builder</a></section><section class="header4 cid-qOj172LW0H mbr-parallax-background" id="header4-h">
+<section class="engine"><a href="https://mobirise.ws/e">best website maker software</a></section><section class="header4 cid-qOj172LW0H mbr-parallax-background" id="header4-h">
 
     
 
@@ -87,9 +87,7 @@
                 <h1 class="mbr-section-title align-center mbr-white pb-3 mbr-bold mbr-fonts-style display-1">Anime</h1>
                 
                 <div class="mbr-text align-center mbr-white pb-3">
-                    <p class="mbr-text mbr-fonts-style display-5">
-                        Intro with background image, color overlay and a picture at the bottom. Mobirise helps you cut down development time by providing you with a flexible website editor with a drag and drop interface.
-                    </p>
+                    <p class="mbr-text mbr-fonts-style display-5">Where you can find the best anime lists on the internet.</p>
                 </div>
                 <div class="mbr-section-btn align-center"><a class="btn btn-md btn-primary display-4" href="https://mobirise.com">LEARN MORE</a>
                     <a class="btn btn-md btn-white-outline display-4" href="https://mobirise.com">LIVE DEMO</a></div>
