create github pages

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/e">best website maker software</a></section><section class="header4 cid-qOj172LW0H mbr-parallax-background" id="header4-h">
+<section class="engine"><a href="https://mobirise.ws/p">open source web page maker</a></section><section class="header4 cid-qOj172LW0H mbr-parallax-background" id="header4-h">
 
     
 
@@ -89,11 +89,10 @@
                 <div class="mbr-text align-center mbr-white pb-3">
                     <p class="mbr-text mbr-fonts-style display-5">Where you can find the best anime lists on the internet.</p>
                 </div>
-                <div class="mbr-section-btn align-center"><a class="btn btn-md btn-primary display-4" href="https://mobirise.com">LEARN MORE</a>
-                    <a class="btn btn-md btn-white-outline display-4" href="https://mobirise.com">LIVE DEMO</a></div>
+                
             </div>
             <div class="mbr-figure pt-5">
-                <img src="assets/images/01.jpg" alt="Mobirise" style="width: 60%;">
+                <img src="assets/images/852947-1368x770.png" alt="Mobirise" title="" style="width: 60%;">
             </div>
         </div>
     </div>
