--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/b">best free site creator</a></section><section class="header4 cid-qOj172LW0H mbr-parallax-background" id="header4-h">
+<section class="engine"><a href="https://mobirise.ws/i">build own website</a></section><section class="header4 cid-qOj172LW0H mbr-parallax-background" id="header4-h">
 
     
 
@@ -112,8 +112,7 @@
                 <p class="mbr-text pb-3 mbr-fonts-style display-5">
                     Click any text to edit or style it. Select text to insert a link. Click blue "Gear" icon in the top right corner to hide/show buttons, text, title and change the block background. Click red "+" in the bottom right corner to add a new block. Use the top left menu to create new pages, sites and add themes.
                 </p>
-                <div class="mbr-section-btn"><a class="btn btn-md btn-secondary display-4" href="https://mobirise.com">LEARN MORE</a>
-                    <a class="btn btn-md btn-white-outline display-4" href="https://mobirise.com">LIVE DEMO</a></div>
+                
             </div>
         </div>
     </div>
