create github pages

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/p">open source web page maker</a></section><section class="header4 cid-qOj172LW0H mbr-parallax-background" id="header4-h">
+<section class="engine"><a href="https://mobirise.ws/p">open source web page builder</a></section><section class="header4 cid-qOj172LW0H mbr-parallax-background" id="header4-h">
 
     
 
@@ -92,7 +92,7 @@
                 
             </div>
             <div class="mbr-figure pt-5">
-                <img src="assets/images/852947-1368x770.png" alt="Mobirise" title="" style="width: 60%;">
+                <img src="assets/images/giphy-1.gif" alt="Mobirise" title="" style="width: 60%;">
             </div>
         </div>
     </div>
