create github pages

--- a/index.html
+++ b/index.html
@@ -51,20 +51,15 @@
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true">
-                <li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="https://mobirise.com">
-                        <span class="mbri-home mbr-iconfont mbr-iconfont-btn"></span>
-                        Services
-                    </a>
+            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
+                    <a class="nav-link link text-white display-4" href="https://mobirise.com"></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link link text-white display-4" href="https://mobirise.com">
                         <span class="mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                         About Us
                     </a>
-                </li>
-            </ul>
+                </li></ul>
             <div class="navbar-buttons mbr-section-btn">
                 <a class="btn btn-sm btn-primary display-4" href="https://mobirise.com">
                     <span class="mbri-save mbr-iconfont mbr-iconfont-btn "></span>
@@ -75,7 +70,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/l">free html website maker</a></section><section class="header4 cid-qOj172LW0H mbr-parallax-background" id="header4-h">
+<section class="engine"><a href="https://mobirise.ws/q">free web page maker download</a></section><section class="header4 cid-qOj172LW0H mbr-parallax-background" id="header4-h">
 
     
 
