--- a/page1.html
+++ b/page1.html
@@ -50,20 +50,15 @@
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true">
-                <li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="https://mobirise.com">
-                        <span class="mbri-home mbr-iconfont mbr-iconfont-btn"></span>
-                        Services
-                    </a>
+            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
+                    <a class="nav-link link text-white display-4" href="https://mobirise.com"></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link link text-white display-4" href="https://mobirise.com">
                         <span class="mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                         About Us
                     </a>
-                </li>
-            </ul>
+                </li></ul>
             <div class="navbar-buttons mbr-section-btn">
                 <a class="btn btn-sm btn-primary display-4" href="https://mobirise.com">
                     <span class="mbri-save mbr-iconfont mbr-iconfont-btn "></span>
@@ -74,14 +69,86 @@
     </nav>
 </section>
 
+<section class="engine"><a href="https://mobirise.ws/m">drag and drop website creator</a></section><section class="header12 cid-qOjvsYID2x mbr-fullscreen mbr-parallax-background" id="header12-j">
 
-  <section class="engine"><a href="https://mobirise.ws/h">make own website</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+    
+
+    
+
+    <div class="container  ">
+            <div class="media-container">
+                <div class="col-md-12 align-center">
+                    <h1 class="mbr-section-title pb-3 mbr-white mbr-bold mbr-fonts-style display-1">Top Anime</h1>
+                    <p class="mbr-text pb-3 mbr-white mbr-fonts-style display-5">Click down below for more information<br></p>
+                    <div class="mbr-section-btn align-center py-2">
+                        <a class="btn btn-md btn-secondary display-4" href="https://mobirise.com">MORE</a>
+                    </div>
+
+                    <div class="icons-media-container mbr-white">
+                        <div class="card col-12 col-md-6 col-lg-3">
+                            <div class="icon-block">
+                            <a href="https://mobirise.com/">
+                                <span class="mbri-layers mbr-iconfont"></span>
+                            </a>
+                            </div>
+                            <h5 class="mbr-fonts-style display-5">
+                                Multi Layout
+                            </h5>
+                        </div>
+
+                        <div class="card col-12 col-md-6 col-lg-3">
+                            <div class="icon-block">
+                                <a href="https://mobirise.com/">
+                                    <span class="mbri-sun mbr-iconfont"></span>
+                                </a>
+                            </div>
+                            <h5 class="mbr-fonts-style display-5">
+                                Creative Idea
+                            </h5>
+                        </div>
+
+                        <div class="card col-12 col-md-6 col-lg-3">
+                            <div class="icon-block">
+                                <a href="https://mobirise.com/">
+                                    <span class="mbri-cash mbr-iconfont"></span>
+                                </a>
+                            </div>
+                            <h5 class="mbr-fonts-style display-5">
+                                Target Buyers
+                            </h5>
+                        </div>
+
+                        <div class="card col-12 col-md-6 col-lg-3">
+                            <div class="icon-block">
+                                <a href="https://mobirise.com/">
+                                    <span class="mbri-mobirise mbr-iconfont"></span>
+                                </a>
+                            </div>
+                            <h5 class="mbr-fonts-style display-5">
+                                Reach Top
+                            </h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
+    </div>
+
+    <div class="mbr-arrow hidden-sm-down" aria-hidden="true">
+        <a href="#next">
+            <i class="mbri-down mbr-iconfont"></i>
+        </a>
+    </div>
+</section>
+
+
+  <script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/smoothscroll/smooth-scroll.js"></script>
   <script src="assets/dropdown/js/script.min.js"></script>
   <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
+  <script src="assets/parallax/jarallax.min.js"></script>
   <script src="assets/theme/js/script.js"></script>
   
   
