create github pages

--- a/page1.html
+++ b/page1.html
@@ -69,7 +69,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/m">drag and drop website creator</a></section><section class="header12 cid-qOjvsYID2x mbr-fullscreen mbr-parallax-background" id="header12-j">
+<section class="engine"><a href="https://mobirise.ws/m">drag and drop web creator</a></section><section class="header12 cid-qOjvsYID2x mbr-fullscreen mbr-parallax-background" id="header12-j">
 
     
 
