--- a/page1.html
+++ b/page1.html
@@ -54,7 +54,7 @@
                     <a class="nav-link link text-white display-4" href="https://mobirise.com"></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="https://mobirise.com">
+                    <a class="nav-link link text-white display-4" href="http://weebanimelist.github.io">
                         <span class="mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                         About Us
                     </a>
@@ -69,7 +69,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/m">drag and drop web creator</a></section><section class="header12 cid-qOjvsYID2x mbr-fullscreen mbr-parallax-background" id="header12-j">
+<section class="engine"><a href="https://mobirise.ws/o">free mobile website builder</a></section><section class="header12 cid-qOjvsYID2x mbr-fullscreen mbr-parallax-background" id="header12-j">
 
     
 
