--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/n">best website builder app</a></section><section class="cid-qOTh0fij3h mbr-fullscreen mbr-parallax-background" id="header2-l">
+<section class="engine"><a href="https://mobirise.ws/a">best website builder</a></section><section class="cid-qOTh0fij3h mbr-fullscreen mbr-parallax-background" id="header2-l">
 
     
 
@@ -74,10 +74,7 @@
                 <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-1">AnimeList</h1>
                 
                 <p class="mbr-text pb-3 mbr-fonts-style display-5">Here you can find the best anime recommendations</p>
-                <div class="mbr-section-btn">
-                    <a class="btn btn-md btn-secondary display-4" href="https://mobirise.com">LEARN MORE</a>
-                    <a class="btn btn-md btn-white-outline display-4" href="https://mobirise.com">LIVE DEMO</a>
-                </div>
+                <div class="mbr-section-btn"><a class="btn btn-md btn-secondary display-4" href="page1.html">CLICK HERE</a></div>
             </div>
         </div>
     </div>
