create github pages

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/c">best website maker</a></section><section class="menu cid-qOXZIPfhEX" once="menu" id="menu1-n">
+<section class="engine"><a href="https://mobirise.ws/f">easy site builder</a></section><section class="menu cid-qOXZIPfhEX" once="menu" id="menu1-n">
 
     
 
@@ -134,7 +134,7 @@
                 <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-1">AnimeList</h1>
                 
                 <p class="mbr-text pb-3 mbr-fonts-style display-5">Here you can find the best anime recommendations<br>Family Friendly Website</p>
-                <div class="mbr-section-btn"><a class="btn btn-md btn-secondary display-4" href="page1.html">CLICK HERE</a></div>
+                <div class="mbr-section-btn"><a class="btn btn-md btn-secondary display-4" href="page1.html">Top Anime List</a> <a class="btn btn-md btn-secondary display-4" href="page2.html">Anime PVs</a></div>
             </div>
         </div>
     </div>
