--- a/page2.html
+++ b/page2.html
@@ -69,7 +69,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/h">how to make your own website</a></section><section class="menu cid-qOXZIPfhEX" once="menu" id="menu1-p">
+<section class="engine"><a href="https://mobirise.ws/o">mobile website builder</a></section><section class="menu cid-qOXZIPfhEX" once="menu" id="menu1-p">
 
     
 
@@ -133,10 +133,7 @@
             <div class="mbr-white col-md-10">
                 <h1 class="mbr-section-title align-center mbr-bold pb-3 mbr-fonts-style display-1">Anime Previews</h1>
                 <p class="mbr-text align-center pb-3 mbr-fonts-style display-5">Here you can find anime previews that can make you interested to watch</p>
-                <div class="mbr-section-btn align-center">
-                        <a class="btn btn-md btn-primary display-4" href="https://mobirise.com">LEARN MORE</a>
-                        <a class="btn btn-md btn-white-outline display-4" href="https://mobirise.com">LIVE DEMO</a>
-                </div>
+                
             </div>
         </div>
     </div>
