--- a/page1.html
+++ b/page1.html
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/k">develop own website</a></section><section class="header12 cid-qOjvsYID2x mbr-fullscreen mbr-parallax-background" id="header12-j">
+<section class="engine"><a href="https://mobirise.ws/d">best web page software</a></section><section class="header12 cid-qOjvsYID2x mbr-fullscreen mbr-parallax-background" id="header12-j">
 
     
 
@@ -153,15 +153,11 @@
                         <div class="mbr-section-btn text-center">
                             <a href="https://mobirise.com" class="btn btn-primary display-4">Learn More</a>
                         </div>
-                        <img src="assets/images/03.jpg" alt="Mobirise">
+                        <img src="assets/images/62374584-p0-676x380.png" alt="Mobirise" title="">
                     </div>
                     <div class="card-box">
-                        <h4 class="card-title mbr-fonts-style display-7">
-                            Unique Styles
-                        </h4>
-                        <p class="mbr-text mbr-fonts-style display-7">
-                            Mobirise offers many site blocks in several themes, and though these blocks are pre-made, they are flexible.
-                        </p>
+                        <h4 class="card-title mbr-fonts-style display-7">Saekano</h4>
+                        <p class="mbr-text mbr-fonts-style display-7">Saekano is a story about a boy that wants to make the "perfect" dating sim game. He was inspired after she saw a beautiful girl standing atop of a hill. He then made his own circle to make the game. Can he and his circle finish making the game before the Comiket?</p>
                     </div>
                 </div>
             </div>
