--- a/page1.html
+++ b/page1.html
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/o">mobile website builder</a></section><section class="header12 cid-qOjvsYID2x mbr-fullscreen mbr-parallax-background" id="header12-j">
+<section class="engine"><a href="https://mobirise.ws/a">best free web site builder</a></section><section class="header12 cid-qOjvsYID2x mbr-fullscreen mbr-parallax-background" id="header12-j">
 
     
 
@@ -71,10 +71,8 @@
             <div class="media-container">
                 <div class="col-md-12 align-center">
                     <h1 class="mbr-section-title pb-3 mbr-white mbr-bold mbr-fonts-style display-1">Top Anime</h1>
-                    <p class="mbr-text pb-3 mbr-white mbr-fonts-style display-5">Click down below for more information<br></p>
-                    <div class="mbr-section-btn align-center py-2">
-                        <a class="btn btn-md btn-secondary display-4" href="https://mobirise.com">MORE</a>
-                    </div>
+                    <p class="mbr-text pb-3 mbr-white mbr-fonts-style display-5">Scroll down below for more information<br></p>
+                    <div class="mbr-section-btn align-center py-2"><a class="btn btn-md btn-secondary display-4" href="index.html">Home</a></div>
 
                     <div class="icons-media-container mbr-white">
                         <div class="card col-12 col-md-6 col-lg-3">
