--- a/page2.html
+++ b/page2.html
@@ -133,7 +133,7 @@
             <div class="mbr-white col-md-10">
                 <h1 class="mbr-section-title align-center mbr-bold pb-3 mbr-fonts-style display-1">Anime Previews</h1>
                 <p class="mbr-text align-center pb-3 mbr-fonts-style display-5">Here you can find anime previews that can make you interested to watch</p>
-                
+                <div class="mbr-section-btn align-center"><a class="btn btn-md btn-primary display-4" href="index.html">Home</a></div>
             </div>
         </div>
     </div>
