create github pages

--- a/page2.html
+++ b/page2.html
@@ -121,7 +121,7 @@
     </nav>
 </section>
 
-<section class="header6 cid-qQolxGOSwx mbr-fullscreen" data-bg-video="https://www.youtube.com/watch?v=nfK6UgLra7g" id="header6-q">
+<section class="header6 cid-qQolxGOSwx mbr-fullscreen" data-bg-video="https://www.youtube.com/watch?v=hRfHcp2GjVI" id="header6-q">
 
     
 
