--- a/page2.html
+++ b/page2.html
@@ -69,7 +69,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws">Mobirise</a></section><section class="menu cid-qOXZIPfhEX" once="menu" id="menu1-p">
+<section class="engine"><a href="https://mobirise.ws/g">how to create own website</a></section><section class="menu cid-qOXZIPfhEX" once="menu" id="menu1-p">
 
     
 
